cmake_minimum_required(VERSION 3.16)
project(cpp-algorithm)

set(CMAKE_CXX_STANDARD 21)

add_executable(cpp-algorithm main.cpp sorting/CartesianTreeSort.h sorting/SlowSort.h sorting/StoogeSort.h sorting/Util.h sorting/IntroSort.h sorting/InsertionSort.h sorting/HeapSort.h sorting/QuickSort.h sorting/MergeSort.h sorting/TimSort.h sorting/BucketSort.h sorting/BitonicSort.h sorting/SmoothSort.h sorting/StrandSort.h sorting/CombSort.h sorting/SleepSort.h sorting/ShellSort.h sorting/BubbleSort.h sorting/SelectionSort.h sorting/GnomeSort.h sorting/CocktailSort.h sorting/CountingSort.h sorting/OddEvenSort.h sorting/RadixSort.h searching/LinearSearch.h searching/BinarySearch.h searching/ExponentialSearch.h searching/InterpolationSearch.h searching/TernarySearch.h searching/JumpSearch.h searching/FibonacciSearch.h searching/TrieSearch.h searching/TreapSearch.h)
